--- a/assets/css/modules/_homepage.scss
+++ b/assets/css/modules/_homepage.scss
@@ -13,13 +13,35 @@
   background: inherit;
 }
 
+.slider-container-inner .swiper-pagination {
+  bottom: 0 !important;
+}
+
 .swiper-container {
   height: 100%;
 }
 
+.swiper-slide.swiper-slide-footer:nth-child(1n) {
+  width: 40%;
+}
+
+.swiper-slide.swiper-slide-footer:nth-child(2n) {
+  width: 40%;
+}
+
+.swiper-slide.swiper-slide-block:nth-child(1n) {
+  width: 85%;
+}
+.swiper-slide.swiper-slide-block:nth-child(2n) {
+  width: 85%;
+}
+
+.swiper-wrapper-footer {
+  transform: translate3d(0, 0, 0) !important;
+}
+
+
 .container {
-  text-align: center;
-  height: 564px;
   position: relative;
 }
 
@@ -27,9 +49,9 @@
   width: 100%;
   display: inline-block;
   z-index: 9;
-  padding: 20px 30px;
-  border-radius: 5px;
-  max-width: 564px;
+  padding: 1.25rem 1.875rem;
+  border-radius: 0.3125rem;
+  max-width: (564/640) * 100%;
   position: absolute;
   left: 50%;
   top: 50%;
@@ -40,21 +62,19 @@
   display: flex;
   flex-wrap: nowrap;
   background-color: #ebedea;
-  font-size: 16px;
+  font-size: 1rem;
   font-family: "Asap-Medium", sans-serif;
   color: #8d8d8d;
-  border-radius: 3px 3px 0;
+  border-radius: 0.1875rem 0.1875rem 0;
   .type-radio {
     cursor: pointer;
     width: 50%;
     text-align: center;
-    padding: 18px;
+    &.active {
+      border-bottom: 4px solid #ef5350;
+      position: relative;
+    }
   }
-}
-
-.container-type .type-radio.active {
-  border-bottom: 4px solid #ef5350;
-  position: relative;
 }
 
 .container-type .type-radio.active:after {
@@ -69,7 +89,6 @@
 }
 
 .container-search {
-  padding: 16px 30px 10px 30px;
   font-size: 15px;
   font-family: "Asap-Regular", sans-serif;
   display: flex;
@@ -78,14 +97,12 @@
 
 .input-search {
   width: 100%;
-  padding: 15px;
   border-radius: 3px;
   background-color: white;
   display: flex;
   flex-wrap: wrap;
   .icon-search {
     font-size: 22px;
-    margin: 5px 15px 0 5px;
   }
   input {
     border: none;
@@ -93,11 +110,11 @@
     flex-grow: 1;
     font-size: 15px;
     outline: none;
+    width: 75%;
   }
 }
 
 .select-search {
-  padding: 0 20px;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -105,7 +122,6 @@
 
 .type-in {
   width: 50%;
-  padding: 10px;
 }
 
 .select-type {
@@ -113,21 +129,18 @@
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  padding: 22px;
   flex-grow: 1;
   outline: none;
-  font-size: 15px;
-  background: url('../images/homepage/icon/arrow.png') 91% / 10% no-repeat #eee;
+  background: url('../images/homepage/icon/arrow.png') 97% no-repeat #f7f8f9;
+  color: #281c0c;
 }
 
 .button-search {
   width: 100%;
-  padding: 10px 30px 30px;
   input {
     width: 100%;
     background-color: #ef5350;
     color: white;
-    padding: 20px;
     border: none;
     cursor: pointer;
     font-family: "Asap-Media", sans-serif;
@@ -141,28 +154,18 @@
 
 .saving-wrapper {
   text-align: center;
-  padding: 20px 15px 30px 20px;
   font-family: "Asap-Bold", sans-serif;
   color: #594f41;
   .saving-inner {
     margin-right: auto;
     margin-left: auto;
-    max-width: 1170px;
-    padding: 0 15px;
-    h1 {
-      font-family: "Asap-Bold", sans-serif;
-      font-size: 30px;
-      color: #ef5350;
-    }
-    h3 {
-      font-size: 19px;
-    }
+    max-width: (564/640) * 100%;
     .saving-content {
       .saving-value {
-        height: 128px;
-        width: 128px;
+        height: 8rem;
+        width: 8rem;
         border-radius: 50%;
-        border: 5px solid #edd9bf;
+        border: 0.3125rem solid #edd9bf;
         background: #cfa267;
         position: relative;
         .saving-value-inner {
@@ -175,13 +178,10 @@
           span {
             font-family: "Asap-Medium", sans-serif;
             color: #fffaf4;
-            font-size: 14px;
             display: block;
           }
           span.number {
             font-family: SFUTradeGothicBoldCondensedTwenty, sans-serif;
-            font-size: 40px;
-            line-height: 40px;
           }
         }
       }
@@ -189,18 +189,17 @@
         position: relative;
         width: 100%;
         flex: 1;
-        margin: 0 30px;
         .savingCost {
           position: relative;
           max-width: 100%;
-          height: 10px;
+          height: 0.625rem;
           background-color: #e0d8ce;
-          border-radius: 10px;
+          border-radius: 0.625rem;
           .savingCost-pointer {
             cursor: pointer;
             position: absolute;
-            width: 42px;
-            height: 42px;
+            width: 2.625rem;
+            height: 2.625rem;
             left: 0;
             top: 50%;
             transform: translate(-50%, -50%);
@@ -209,10 +208,10 @@
             border-radius: 50%;
             &:before {
               position: absolute;
-              top: -4px;
-              right: -4px;
-              bottom: -4px;
-              left: -4px;
+              top: -0.25rem;
+              right: -0.25rem;
+              bottom: -0.25rem;
+              left: -0.25rem;
               content: '';
               background: #fff;
               border-radius: inherit;
@@ -241,7 +240,7 @@
               margin-left: -6px;
               color: #ef5350;
               font-family: "SFUTradeGothicBoldCondensedTwenty", sans-serif;
-              font-size: 30px;
+              font-size: 4vw;
               text-align: center;
               transition: opacity .3s ease-in-out 0s;
               white-space: nowrap;
@@ -250,6 +249,11 @@
               .slider-arrow {
                 display: none !important;
               }
+            }
+
+            @media screen and ( max-width: 640px ) {
+              width: 20px;
+              height: 20px;
             }
           }
         }
@@ -282,10 +286,13 @@
     .saving-title {
       .title-inner {
         width: 128px;
-        font-size: 16px;
         text-align: center;
         .title-caption {
             color: #ef5350;
+        }
+        @media screen and ( max-width: 640px ) {
+          width: 64px;
+          height: 64px;
         }
       }
     }
@@ -299,14 +306,12 @@
 .slider-container-inner {
   margin-right: auto;
   margin-left: auto;
-  max-width: 1170px;
-  padding: 30px 15px;
   .head-slider {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    & > h3 {
+    & > h3.borderBottom {
       position: relative;
       &:after {
         position: absolute;
@@ -318,8 +323,14 @@
         background-color: #cfa267;
       }
     }
+    h3 {
+      i.icon {
+        font-size: 1rem;
+        vertical-align: middle;
+      }
+    }
     .title-slider {
-      padding: 15px 30px;
+      padding: 0.9375rem 1.875rem;
       background: url('../images/slider/sticky.png') no-repeat;
     }
   }
@@ -360,8 +371,8 @@
         }
         .countdown {
           position: absolute;
-          left: 10px;
-          bottom: 0;
+          left: 0.625rem;
+          bottom: 0.625rem;
           display: flex;
           flex-wrap: wrap;
           color: #ef5350;
@@ -377,7 +388,7 @@
       }
     }
     .block-info {
-      padding: 20px;
+      padding: 1.25rem;
       display: flex;
       flex-wrap: wrap;
       align-items: center;
@@ -404,7 +415,7 @@
   background-color: #f7f8f9;
   .title-news {
     h2 {
-      a {
+      a.borderBottom {
         border-bottom: 1px solid #cfa267;
       }
     }
@@ -414,10 +425,9 @@
 .block {
   display: flex;
   flex-wrap: wrap;
-  padding: 30px 0;
   background-color: white;
   .block-left {
-    width: 50%;
+    width: 40%;
     background: url('../images/homepage/block/block_01.jpg') no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -425,8 +435,7 @@
     background-size: cover;
   }
   .block-right {
-    width: 50%;
-    padding: 18px 12px;
+    width: 60%;
     i {
       vertical-align: middle;
     }
@@ -437,14 +446,17 @@
       align-items: center;
       .block-right-inner-title {
         flex-grow: 1;
-        width: 85%;
+        width: 75%;
+        margin-right: 0.3125rem;
       }
       .block-right-inner-flag {
-        width: 28px;
-        height: 44px;
+        width: 1.75rem;
+        height: 2.75rem;
         background: url('../images/homepage/icon/icon_flag.png') no-repeat;
+        background-size: cover;
         &.active {
           background: url('../images/homepage/icon/icon_flag_active.png') no-repeat;
+          background-size: cover;
         }
       }
     }
@@ -454,10 +466,53 @@
       }
       span {
         float: right;
+        @media screen and ( max-width: 340px ) {
+          float: left;
+        }
       }
     }
   }
 }
+
+.swiper-slide-footer {
+  margin: 1rem;
+  padding: 1rem;
+  background-color: white;
+  margin-right: inherit !important;;
+}
+
+
+.footer {
+  .body-slider {
+    display: flex;
+    flex-wrap: wrap;
+    .title-slider {
+      width: 2.875rem;
+      height: 1.25rem;
+      padding: 0.225rem;
+      background: url('../images/homepage/icon/icon_flag_red.jpg') no-repeat;
+    }
+    .body-slider-inner {
+      width: 80%;
+      padding: 0 0.425rem;
+    }
+  }
+}
+
+footer {
+  background-color: #1a1514;
+  .head-slider {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
+
+
+
+
 
 
 
