fixed button search

--- a/assets/css/modules/_common.scss
+++ b/assets/css/modules/_common.scss
@@ -156,6 +156,10 @@ h3 {
   background-color: #cfa267 !important;
 }
 
+.backGroundRed {
+  background-color: #ef5350;
+}
+
 .padding18 {
   padding: 1.125rem;
 }
@@ -326,13 +330,16 @@ h3 {
   align-items: center;
 }
 
-
 .width50per {
   width: 50%;
 }
 
 .width70per {
   width: 70%;
+}
+
+.width100per {
+  width: 100%;
 }
 
 .heightHome {
