--- a/assets/css/modules/_homeproject.scss
+++ b/assets/css/modules/_homeproject.scss
@@ -35,7 +35,7 @@
       position: relative;
     }
     h3 {
-      left: 20px;
+      left: 0;
       transform: rotate(45deg);
       font-size: 1.185rem;
       line-height: 1.485rem;
