--- a/assets/css/modules/_common.scss
+++ b/assets/css/modules/_common.scss
@@ -1,6 +1,41 @@
+@font-face {
+  font-family: "Asap-Regular";
+  src: url("https://cdn.houseviet.vn/fonts/Asap-Regular.eot?#iefix") format("embedded-opentype"), url("https://cdn.houseviet.vn/fonts/Asap-Regular.woff2") format("woff2"), url("https://cdn.houseviet.vn/fonts/Asap-Regular.woff") format("woff"), url("https://cdn.houseviet.vn/fonts/Asap-Regular.ttf") format("truetype"), url("https://cdn.houseviet.vn/fonts/Asap-Regular.svg#Asap-Regular") format("svg");
+  font-style: normal;
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: "Asap-Medium";
+  src: url("https://cdn.houseviet.vn/fonts/Asap-Medium.eot?#iefix") format("embedded-opentype"), url("https://cdn.houseviet.vn/fonts/Asap-Medium.woff2") format("woff2"), url("https://cdn.houseviet.vn/fonts/Asap-Medium.woff") format("woff"), url("https://cdn.houseviet.vn/fonts/Asap-Medium.ttf") format("truetype"), url("https://cdn.houseviet.vn/fonts/Asap-Medium.svg#Asap-Medium") format("svg");
+  font-style: normal;
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: "Asap-Bold";
+  src: url("https://cdn.houseviet.vn/fonts/Asap-Bold.eot?#iefix") format("embedded-opentype"), url("https://cdn.houseviet.vn/fonts/Asap-Bold.woff2") format("woff2"), url("https://cdn.houseviet.vn/fonts/Asap-Bold.woff") format("woff"), url("https://cdn.houseviet.vn/fonts/Asap-Bold.ttf") format("truetype"), url("https://cdn.houseviet.vn/fonts/Asap-Bold.svg#Asap-Bold") format("svg");
+  font-style: normal;
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: "SFUTradeGothicBoldCondensedTwenty";
+  src: url("https://cdn.houseviet.vn/fonts/SFUTradeGothic-BoldCondensedTwenty.eot?#iefix") format("embedded-opentype"), url("https://cdn.houseviet.vn/fonts/SFUTradeGothic-BoldCondensedTwenty.woff2") format("woff2"), url("https://cdn.houseviet.vn/fonts/SFUTradeGothic-BoldCondensedTwenty.woff") format("woff"), url("https://cdn.houseviet.vn/fonts/SFUTradeGothic-BoldCondensedTwenty.ttf") format("truetype"), url("https://cdn.houseviet.vn/fonts/SFUTradeGothic-BoldCondensedTwenty.svg#SFUTradeGothicBoldCondensedTwenty") format("svg");
+  font-style: normal;
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: "gbnd";
+  src: url("../gbnd_font/fonts/gbnd.eot?#iefix") format("embedded-opentype"), url("../gbnd_font/fonts/gbnd.woff") format("woff"), url("../gbnd_font/fonts/gbnd.ttf") format("truetype"), url("../gbnd_font/fonts/gbnd.svg#gbnd") format("svg");
+  font-style: normal;
+  font-weight: normal;
+}
+
 html {
   font-size: 100%;
-  @media screen and ( max-width: 640px ) {
+  @media screen and ( max-width: 450px ) {
     font-size: 62.5%;
   }
 
@@ -64,20 +99,28 @@ h3 {
   font-family: "SFUTradeGothicBoldCondensedTwenty", sans-serif;
 }
 
-.fnMyriad {
-  font-family: "Myriad Pro";
-}
-
 .fn60 {
   font-size: 3.75rem;
+}
+
+.fn50 {
+  font-size: 3.125rem;
 }
 
 .fn40 {
   font-size: 2.5rem;
 }
 
+.fn36 {
+  font-size: 2.25rem;
+}
+
 .fn34 {
   font-size: 2.125rem !important;
+}
+
+.fn32 {
+  font-size: 2rem !important;
 }
 
 .fn30 {
@@ -89,7 +132,7 @@ h3 {
 }
 
 .fn24 {
-  font-size: 1.5rem;
+  font-size: 1.5rem !important;
 }
 
 .fn21 {
@@ -116,8 +159,24 @@ h3 {
   font-size: 0.85rem;
 }
 
+.fn12 {
+  font-size: 0.75rem;
+}
+
 .fn10 {
   font-size: 0.625rem;
+}
+
+.fnWeightIcon {
+  -webkit-text-stroke: 2px #e65100;
+}
+
+.fnWeightIconWhite {
+  -webkit-text-stroke: 2px #fff;
+}
+
+.fnWeightIconNormal {
+  -webkit-text-stroke: 2px #57585a;
 }
 
 .lnHeight1rem {
@@ -149,7 +208,12 @@ h3 {
 }
 
 .colorWhite {
-  color: white;
+  color: white !important;
+}
+
+
+.colorBlue {
+  color: #2c5fac;
 }
 
 .backgroundBody {
@@ -168,12 +232,35 @@ h3 {
   background-color: #cfa267 !important;
 }
 
+.backGroundYellow2 {
+ background-color: #ffd631;
+}
+
+.backGroundFacebook {
+  background-color: #4b76bd;
+}
+
+.backGroundZalo {
+  background-color: #1891e2;
+}
+
 .backGroundRed {
   background-color: #ef5350;
 }
 
 .backgroundBlack {
   background-color: #1a1514;
+}
+
+.backGroundBLue {
+  background-color: #28a8dd;
+}
+
+.padding2px {
+  padding: 2px;
+}
+.padding35 {
+  padding: 2.1875rem;
 }
 
 .padding18 {
@@ -240,8 +327,14 @@ h3 {
   padding: 0 3.75rem;
 }
 
+  .mgTop-30 {
+  margin-top: -1.875rem;
+}
+.mgTop10 {
+  margin-top: 0.625rem;
+}
 .mgTop15 {
-  margin-top: 0.9375rem;
+  margin-top: 0.9375rem !important;
 }
 
 .mgTop30 {
@@ -256,8 +349,20 @@ h3 {
   margin-right: 2.0625rem;
 }
 
+.mgRight10 {
+  margin-right: 0.625rem !important;
+}
+
 .mgRight15 {
   margin-right: 0.9375rem;
+}
+
+.mgRight60 {
+  margin-right: 3.75rem;
+}
+
+.mgLeft15 {
+  margin-left: 0.9375rem;
 }
 
 .margin15-15-10 {
@@ -293,7 +398,7 @@ h3 {
 }
 
 .padding15-30 {
-  padding: 0.9375rem 0 1.875rem;
+  padding: 0.9375rem 1.875rem;
 }
 
 .padding20-72 {
@@ -333,11 +438,20 @@ h3 {
 }
 
 .borderColor {
-  border-top: 1px solid #cfa267;
+  border-top: 0.015625rem solid #cfa267;
 }
+
+.borderColorBold {
+  border-top: 0.25rem solid #cfa267;
+}
+
 
 .borderRadius3 {
   border-radius: 0.1875rem;
+}
+
+.borderRadius5 {
+  border-radius: 0.3125rem;
 }
 
 .borderRadius10 {
@@ -348,8 +462,16 @@ h3 {
   border: 1px dashed #cfa267;
 }
 
+.borderDashedBrown {
+  border: 1px dashed #acacac;
+}
+
+.borderRed {
+  border: 2px solid #ef5350;
+}
+
 .disInLineBlock {
-  display: inline-block;
+  display: inline-block !important;
 }
 
 .disBlock {
@@ -360,6 +482,14 @@ h3 {
   padding: 0.9375rem 1.875rem;
 }
 
+.padding15-0 {
+  padding: 0.9375rem 0;
+}
+
+.padding30-0 {
+  padding: 1.875rem 0;
+}
+
 .padding20230 {
   padding: 1.25rem 0 1.875rem;
 }
@@ -368,6 +498,9 @@ h3 {
   padding: 1.875rem 3.125rem 1.875rem 1.25rem !important;
 }
 
+.padding10-10-10-0 {
+  padding: 0.625rem 0.625rem 0.625rem 0;
+}
 .flex {
   display: flex !important;
   flex-wrap: wrap;
@@ -383,9 +516,36 @@ h3 {
   justify-content: center;
   align-items: center;
 }
+.justLeft {
+  justify-content: left;
+}
+
+.width90px {
+  width: 5.625rem;
+}
+
+.width64px {
+  width: 4rem;
+}
+
+.width36px {
+  width: 2.25rem !important;
+}
+
+.width10per {
+  width: 10%;
+}
 
 .width21per {
   width: 21%;
+}
+
+.width29per {
+  width: 29%;
+}
+
+.width71per {
+  width: 71%;
 }
 
 .width34per {
@@ -408,6 +568,10 @@ h3 {
   width: 70%;
 }
 
+.width90per {
+  width: 90%;
+}
+
 .width100per {
   width: 100%;
 }
@@ -420,9 +584,36 @@ h3 {
   height: 28.5rem;
 }
 
+.heightSlider {
+  height: 31.25rem;
+}
+
+.heightProjectDetail {
+  height: 16rem;
+}
+
 .borderBottomVideo {
   border-bottom: 5px solid #dedff3;
 }
+
+.borderBottomRed {
+  border-bottom: 4px solid #ef5350;
+}
+
+.borderBottomRedHalf {
+  position: absolute;
+  left: 0;
+  bottom: -15px;
+  content: '';
+  height: 4px;
+  width: 3.75rem;
+  background-color: #ef5350;
+}
+
+.border50per{
+  border-radius: 50%;
+}
+
 
 .pagination {
   width: 100%;
@@ -434,7 +625,7 @@ h3 {
   background-color: #e0e0e0;
   color: black;
   font-size: 1.3125rem;
-  padding: 0.875rem 1rem;
+  padding: 0.579rem 1rem;
   cursor: pointer;
   .icon {
     font-size: 1rem;
@@ -506,6 +697,46 @@ h3 {
   float: left;
 }
 
+.breadcrumbs {
+  li {
+    display: inline-block;
+  }
+}
+
+.fixedBottom {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+}
+
+.zIndex1 {
+  z-index: 1;
+}
+
+.positionRelative {
+  position: relative;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.textUnderline {
+  text-decoration: underline;
+}
+
+.dot {
+  height: 0.625rem;
+  width: 0.625rem;
+  background-color: #e27070;
+  border-radius: 50%;
+  display: inline-block;
+  margin: 0 1.25rem 0 0.25rem;
+}
+
+.borderShadow {
+  box-shadow: 0 0.3125rem #dddedf;
+}
 
 
 
