--- a/assets/css/modules/_homeproject.scss
+++ b/assets/css/modules/_homeproject.scss
@@ -49,6 +49,232 @@
   }
 }
 
+.project-block-slider {
+  .swiper-container {
+    width: 100%;
+    height: 300px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .swiper-slide {
+    background-size: cover;
+    background-position: center;
+  }
+  .gallery-thumbs {
+    height: 20%;
+    box-sizing: border-box;
+    border-radius: 0 0 3px 3px;
+    display: inline-table;
+    .swiper-wrapper {
+      height: auto ;
+      margin: 1.251rem 0.9375rem;
+    }
+  }
+  .gallery-thumbs .swiper-slide {
+    width: 25%;
+    height: 100%;
+    opacity: 0.4;
+    border-radius: 3px;
+  }
+  .gallery-thumbs .swiper-slide-thumb-active {
+    opacity: 1;
+  }
+  .swiper-button-prev {
+    top: 50%;
+    left: 0;
+    background-color: #cfa267;
+    width: 1.875rem;
+    height: 3.75rem;
+    &.swiper-button-disabled {
+      background-color: #e7e8e3;
+      opacity: 1;
+      .icon {
+        color: #cfa267;
+      }
+    }
+    .icon {
+      color: white;
+      font-size: 1.375rem;
+    }
+  }
+  .swiper-button-next {
+    bottom: 3.375rem;
+    right: 0;
+    background-color: #cfa267;
+    width: 1.875rem;
+    height: 3.75rem;
+    &.swiper-button-disabled {
+      background-color: #e7e8e3;
+      opacity: 1;
+      .icon {
+        color: #cfa267;
+      }
+    }
+    .icon {
+      color: white;
+      font-size: 1.375rem;
+    }
+  }
+  .swiper-slide.swiper-slide-visible {
+    width: 5rem !important;
+    height: 5rem !important;
+  }
+}
+
+.div-inner {
+  padding: 0.5rem;
+  border-radius: 50%;
+  &.facebook {
+    background-color: #3b5998;
+  }
+  &.google-plus {
+    background-color: #dd4b39;
+  }
+}
+
+.street-view {
+  cursor: pointer;
+  &.active {
+    border-bottom: 4px solid #ef5350;
+    color: #ef5350;
+  }
+}
+
+#map {
+  width: 100%;
+  height: 22.1875rem;
+}
+
+.icon-star {
+  color: #a9a9a9;
+  margin-left: 2px;
+  &.active {
+    color: #e8b63f;
+  }
+}
+
+.wrapper-project-detail {
+  background: url('../images/homepage/ver02/slider_01.jpg') no-repeat center;
+  background-size: cover;
+}
+
+.logo-responsive {
+  @media screen and (max-width: 640px) {
+    width: 100%;
+  }
+}
+
+.logo-gift {
+  background-color: #f46464;
+}
+.triangle-gift-left {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 1.68328125rem 3.3665625rem 0 0;
+  border-color: #f46464 transparent transparent transparent;
+}
+.triangle-gift-right {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0 3.3665625rem 1.68328125rem 0;
+  border-color: transparent #f46464 transparent transparent;
+}
+.triangle-gift-top {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 1.125rem 0 0 0.625rem;
+  border-color: transparent transparent transparent #ad3b3b;
+}
+
+.block-project-detail {
+  margin-top: 9.675rem;
+  @media screen and(max-width: 568px) {
+    margin-top: 7.575rem;
+  }
+  @media screen and(max-width: 450px) {
+    margin-top: 9.675rem;
+  }
+  @media screen and(max-width: 355px) {
+    margin-top: 7.575rem;
+  }
+}
+
+.blockProject {
+  height: 17.8125rem;
+  background: url('../images/homepage/ver02/slider_01.jpg') no-repeat center;
+  background-size: cover;
+}
+
+.blockProjectDetail {
+  padding: 2.1875rem;
+  @media screen and(max-width: 576px) {
+    .fn50 {
+      font-size: 1.625rem;
+    }
+    .fn13 {
+      font-size: 0.625rem;
+    }
+    .fn24 {
+      font-size: 1rem;
+    }
+  }
+}
+
+.project-icon {
+  background-color: #e9bc81;
+  &.active {
+    background-color: #cfa267;
+  }
+}
+
+.blockProjectInner {
+  height: 28rem;
+  background: url('../images/homepage/jamaica.png') no-repeat center;
+  background-size: contain;
+}
+
+.project-block-slider-detail {
+  .swiper-button-next {
+    bottom: calc(50% - 1.875rem) ;
+  }
+}
+
+.project-contact {
+  @media screen and(max-width: 465px) {
+    .width70per {
+      width: 64%;
+    }
+  }
+}
+.project-main {
+  .nav-icon span {
+    background-color: #ef5350;
+  }
+  .swiper-slide.swiper-slide-construct:nth-child(1n) {
+    width: 40%;
+  }
+  .swiper-slide.swiper-slide-construct:nth-child(2n) {
+    width: 40%;
+  }
+  .fixedBottom {
+
+      .fn19 {
+        @media screen and(max-width: 611px) {
+          font-size: 1rem;
+        }
+        @media screen and(max-width: 536px) {
+          font-size: 0.875rem;
+        }
+        @media screen and(max-width: 485px) {
+          font-size: 0.775rem;
+        }
+    }
+  }
+}
+
 
 
 
