--- a/assets/css/modules/_common.scss
+++ b/assets/css/modules/_common.scss
@@ -175,6 +175,10 @@ h3 {
   -webkit-text-stroke: 2px #fff;
 }
 
+.fnWeightIconYellow {
+  -webkit-text-stroke: 1px #cfa267;
+}
+
 .fnWeightIconNormal {
   -webkit-text-stroke: 2px #57585a;
 }
@@ -200,7 +204,7 @@ h3 {
 }
 
 .colorBlack {
-  color: #281c0c;
+  color: #85817c;
 }
 
 .colorBrown {
@@ -234,6 +238,10 @@ h3 {
 
 .backGroundYellow2 {
  background-color: #ffd631;
+}
+
+.backGroundYellow3 {
+  background-color: #f8f1e8;
 }
 
 .backGroundFacebook {
@@ -512,6 +520,11 @@ h3 {
   align-items: center;
 }
 
+.itemsTop {
+  justify-content: space-between;
+}
+
+
 .justCenter {
   justify-content: center;
   align-items: center;
@@ -566,6 +579,10 @@ h3 {
 
 .width70per {
   width: 70%;
+}
+
+.width80per {
+  width: 80%;
 }
 
 .width90per {
@@ -738,6 +755,17 @@ h3 {
   box-shadow: 0 0.3125rem #dddedf;
 }
 
+.lineHeight24px {
+  line-height: 1.5rem;
+}
+
+.paddingTop25px {
+  padding-top: 1.5625rem;
+}
+
+.italic {
+  font-style: italic;
+}
 
 
 
