--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -172,6 +172,9 @@ h3 {
 .fnWeightIconWhite {
   -webkit-text-stroke: 2px #fff; }
 
+.fnWeightIconYellow {
+  -webkit-text-stroke: 1px #cfa267; }
+
 .fnWeightIconNormal {
   -webkit-text-stroke: 2px #57585a; }
 
@@ -191,7 +194,7 @@ h3 {
   color: #cfa267; }
 
 .colorBlack {
-  color: #281c0c; }
+  color: #85817c; }
 
 .colorBrown {
   color: #3f3424; }
@@ -216,6 +219,9 @@ h3 {
 
 .backGroundYellow2 {
   background-color: #ffd631; }
+
+.backGroundYellow3 {
+  background-color: #f8f1e8; }
 
 .backGroundFacebook {
   background-color: #4b76bd; }
@@ -426,6 +432,9 @@ h3 {
   justify-content: space-between;
   align-items: center; }
 
+.itemsTop {
+  justify-content: space-between; }
+
 .justCenter {
   justify-content: center;
   align-items: center; }
@@ -468,6 +477,9 @@ h3 {
 
 .width70per {
   width: 70%; }
+
+.width80per {
+  width: 80%; }
 
 .width90per {
   width: 90%; }
@@ -603,6 +615,15 @@ h3 {
 
 .borderShadow {
   box-shadow: 0 0.3125rem #dddedf; }
+
+.lineHeight24px {
+  line-height: 1.5rem; }
+
+.paddingTop25px {
+  padding-top: 1.5625rem; }
+
+.italic {
+  font-style: italic; }
 
 .header {
   display: flex;
@@ -2153,5 +2174,52 @@ footer {
 .enterprise-slider .swiper-button-next-home {
   left: inherit;
   right: 0; }
+
+.widthImgAvatar {
+  width: 5.875rem;
+  height: 5.875rem; }
+
+.widthPost {
+  width: 8.125rem; }
+
+@media screen and (max-width: 480px) {
+  .profile .fn21 {
+    font-size: 1rem; } }
+@media screen and (max-width: 480px) {
+  .profile .fn13 {
+    font-size: 0.675rem; } }
+
+.borderProfile {
+  border: 1px solid #d6d7d7; }
+
+.input-form label {
+  width: 80%;
+  text-align: left;
+  display: inline-block; }
+.input-form button.btn-upload {
+  width: auto;
+  padding: 0.9375rem 0.506rem;
+  background-color: #f8f1e8; }
+.input-form.change-password button {
+  width: auto;
+  padding: 1.25rem 3.75rem; }
+.input-form.information label {
+  width: 20%; }
+.input-form.information input {
+  width: 80%;
+  background-color: white; }
+.input-form.information select {
+  width: 80%;
+  display: inline-block;
+  outline: none;
+  border: none;
+  background-color: white;
+  color: #281c0c;
+  padding: 1.25rem;
+  font-size: 1rem;
+  font-family: "Asap-Regular", sans-serif;
+  margin: 0.3125rem 0; }
+.input-form.information .group-address input, .input-form.information .group-address select {
+  width: 100%; }
 
 /*# sourceMappingURL=site.css.map */
