--- a/assets/css/modules/_common.scss
+++ b/assets/css/modules/_common.scss
@@ -659,13 +659,13 @@ h3 {
     width: 80%;
     display: inline-block;
     outline: none;
-    border: none;
     background-color: #f0f0f0;
     color: #281c0c;
     padding: 1.25rem;
     font-size: 1rem;
     font-family: "Asap-Regular", sans-serif;
     margin: 0.3125rem 0;
+    border: 1px solid #d8d8d8;
   }
   .input-checkbox {
     width: 80%;
