--- a/assets/css/modules/_profile.scss
+++ b/assets/css/modules/_profile.scss
@@ -53,17 +53,51 @@
       width: 80%;
       display: inline-block;
       outline: none;
-      border: none;
+      border: 1px solid #d8d8d8;
       background-color: white;
       color: #281c0c;
       padding: 1.25rem;
-      font-size: 1rem;
+      font-size: 0.8125rem;
       font-family: "Asap-Regular", sans-serif;
       margin: 0.3125rem 0;
     }
+
     .group-address {
       input, select {
         width: 100%;
+      }
+    }
+    .fn21 {
+      @media screen and (max-width: 510px) {
+        font-size: 1rem;
+      }
+    }
+    .fn13 {
+      @media screen and (max-width: 510px) {
+        font-size: 0.675rem;
+      }
+    }
+
+    .padding30 {
+      @media screen and (max-width: 510px) {
+        padding: 1rem;
+      }
+    }
+
+    .created-left, .created-right {
+      @media screen and (max-width: 370px) {
+        width: 100%;
+      }
+    }
+
+    .created-right {
+      @media screen and (max-width: 370px) {
+        margin-top: 1rem;
+      }
+    }
+    .created-inner {
+      select {
+        width: 45%;
       }
     }
   }
