--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -540,13 +540,13 @@ h3 {
     width: 80%;
     display: inline-block;
     outline: none;
-    border: none;
     background-color: #f0f0f0;
     color: #281c0c;
     padding: 1.25rem;
     font-size: 1rem;
     font-family: "Asap-Regular", sans-serif;
-    margin: 0.3125rem 0; }
+    margin: 0.3125rem 0;
+    border: 1px solid #d8d8d8; }
   .input-form .input-checkbox {
     width: 80%;
     display: inline-block;
@@ -2135,6 +2135,8 @@ footer {
   .project-main .fixedBottom .fn19 {
     font-size: 0.775rem; } }
 
+.enterprise .nav-icon span {
+  background: #ef5350; }
 .enterprise .swiper-container {
   display: flex;
   flex-wrap: wrap;
@@ -2212,14 +2214,31 @@ footer {
   width: 80%;
   display: inline-block;
   outline: none;
-  border: none;
+  border: 1px solid #d8d8d8;
   background-color: white;
   color: #281c0c;
   padding: 1.25rem;
-  font-size: 1rem;
+  font-size: 0.8125rem;
   font-family: "Asap-Regular", sans-serif;
   margin: 0.3125rem 0; }
 .input-form.information .group-address input, .input-form.information .group-address select {
   width: 100%; }
+@media screen and (max-width: 510px) {
+  .input-form.information .fn21 {
+    font-size: 1rem; } }
+@media screen and (max-width: 510px) {
+  .input-form.information .fn13 {
+    font-size: 0.675rem; } }
+@media screen and (max-width: 510px) {
+  .input-form.information .padding30 {
+    padding: 1rem; } }
+@media screen and (max-width: 370px) {
+  .input-form.information .created-left, .input-form.information .created-right {
+    width: 100%; } }
+@media screen and (max-width: 370px) {
+  .input-form.information .created-right {
+    margin-top: 1rem; } }
+.input-form.information .created-inner select {
+  width: 45%; }
 
 /*# sourceMappingURL=site.css.map */
