--- a/assets/css/modules/_common.scss
+++ b/assets/css/modules/_common.scss
@@ -343,11 +343,15 @@ h3 {
   padding: 1.25rem 0 1.25rem 1.25rem;
 }
 
+.padding20-0-0-30 {
+  padding: 1.25rem 0 0 1.875rem;
+}
+
 .padding0-60 {
   padding: 0 3.75rem;
 }
 
-  .mgTop-30 {
+.mgTop-30 {
   margin-top: -1.875rem;
 }
 .mgTop10 {
@@ -545,8 +549,17 @@ h3 {
   justify-content: center;
   align-items: center;
 }
+
+.justContent {
+  justify-content: center;
+}
+
 .justLeft {
   justify-content: left;
+}
+
+.width186px {
+  width: 11.5rem;
 }
 
 .width90px {
@@ -735,6 +748,9 @@ h3 {
   width: 5.625rem;
   height: 2.1875rem;
 }
+
+.imgVerify {}
+
 .floatRight {
   float: right;
 }
@@ -777,7 +793,6 @@ h3 {
   background-color: #e27070;
   border-radius: 50%;
   display: inline-block;
-  margin: 0 1.25rem 0 0.25rem;
 }
 
 .borderShadow {
@@ -795,6 +810,8 @@ h3 {
 .italic {
   font-style: italic;
 }
+
+
 
 
 
