--- a/assets/css/modules/_profile.scss
+++ b/assets/css/modules/_profile.scss
@@ -124,6 +124,11 @@
     width: 44%;
   }
 
+  .swiper-container {
+    margin: 1.875rem 0 0 0;
+  }
+
+
   .swiper-pagination {
     position: relative;
     left: inherit;
