--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -229,6 +229,9 @@ h3 {
 .backGroundYellow3 {
   background-color: #f8f1e8; }
 
+.backGroundYellow4 {
+  background-color: #fffcf9; }
+
 .backGroundFacebook {
   background-color: #4b76bd; }
 
@@ -398,6 +401,9 @@ h3 {
   border-radius: 0.1875rem; }
 
 .borderRadius5 {
+  border-radius: 0.3125rem; }
+
+.borderRadius8 {
   border-radius: 0.3125rem; }
 
 .borderRadius10 {
@@ -643,7 +649,14 @@ h3 {
   display: inline-block; }
 
 .borderShadow {
-  box-shadow: 0 0.3125rem #dddedf; }
+  -webkit-box-shadow: 0 0.3125rem #dddedf;
+  -moz-box-shadow: 0 0.3125rem #dddedf;
+  box-shadow: 0 0.1125rem #dddedf; }
+
+.borderShadowProfile {
+  -webkit-box-shadow: 0 0.1125rem #d2cac1;
+  -moz-box-shadow: 0 0.1125rem #d2cac1;
+  box-shadow: 0 0.1125rem #d2cac1; }
 
 .lineHeight24px {
   line-height: 1.5rem; }
@@ -2281,6 +2294,8 @@ footer {
   width: 44%; }
 .broker .swiper-slide:nth-child(2n) {
   width: 44%; }
+.broker .swiper-container {
+  margin: 1.875rem 0 0 0; }
 .broker .swiper-pagination {
   position: relative;
   left: inherit;
