--- a/assets/css/modules/_profile.scss
+++ b/assets/css/modules/_profile.scss
@@ -163,6 +163,55 @@
   }
 }
 
+.post {
+  .container-type {
+    background-color: white;
+    color: #9b9b9b;
+  }
+  .container-type .type-radio.active {
+    color: #ef5350;
+  }
+
+  .input-form {
+    label, input, select {
+      width: 100%;
+    }
+    input, select, textarea {
+      background-color: white;
+    }
+    textarea {
+      width: 100%;
+    }
+  }
+  .input-form button.btn-upload {
+    padding: 2.075rem 2.2rem;
+    margin: 0;
+  }
+  .select-type {
+    background: url('../images/homepage/icon/arrow.png') 95% no-repeat white;
+  }
+
+  .select-type.select-info {
+    background: url('../images/homepage/icon/arrow_triangle.png') 97% no-repeat white;
+  }
+  select.mgRight20 {
+    @media screen and (max-width: 559px) {
+      margin-right: 1rem !important;
+    }
+  }
+}
+
+.delete-image {
+  position: absolute;
+  right: 20px;
+  bottom: 10px;
+  background-color: white;
+  padding: 5px 5px 0 5px;
+}
+
+
+
+
 
 
 
