--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -193,8 +193,14 @@ h3 {
 .colorYellow {
   color: #cfa267; }
 
+.colorYellow2 {
+  color: #643f0e; }
+
 .colorBlack {
   color: #85817c; }
+
+.colorBlack2 {
+  color: #202020; }
 
 .colorBrown {
   color: #3f3424; }
@@ -234,6 +240,9 @@ h3 {
 
 .backGroundFacebook {
   background-color: #4b76bd; }
+
+.backgroundPost {
+  background-color: #efefef; }
 
 .backGroundZalo {
   background-color: #1891e2; }
@@ -329,13 +338,19 @@ h3 {
   margin-right: 0.625rem !important; }
 
 .mgRight15 {
-  margin-right: 0.9375rem; }
+  margin-right: 15px !important; }
+
+.mgRight20 {
+  margin-right: 1.25rem !important; }
 
 .mgRight60 {
   margin-right: 3.75rem; }
 
 .mgLeft15 {
   margin-left: 0.9375rem; }
+
+.mgLeft5 {
+  margin-left: 0.3125rem; }
 
 .margin15-15-10 {
   margin: 0.9375rem 0.9375rem 0.625rem; }
@@ -404,7 +419,7 @@ h3 {
   border-radius: 0.3125rem; }
 
 .borderRadius8 {
-  border-radius: 0.3125rem; }
+  border-radius: 0.5rem; }
 
 .borderRadius10 {
   border-radius: 1.625rem; }
@@ -445,6 +460,12 @@ h3 {
 .padding10-10-10-0 {
   padding: 0.625rem 0.625rem 0.625rem 0; }
 
+.padding5-10 {
+  padding: 0.3125rem 0.625rem; }
+
+.padding30-20 {
+  padding: 1.875rem 1.25rem; }
+
 .flex {
   display: flex !important;
   flex-wrap: wrap; }
@@ -468,6 +489,12 @@ h3 {
 
 .width186px {
   width: 11.5rem; }
+
+.width116px {
+  width: 7.25rem; }
+
+.height116px {
+  height: 7.25rem; }
 
 .width90px {
   width: 5.625rem; }
@@ -505,8 +532,11 @@ h3 {
 .width42per {
   width: 42%; }
 
+.width48per {
+  width: 48% !important; }
+
 .width50per {
-  width: 50%; }
+  width: 50% !important; }
 
 .width70per {
   width: 70%; }
@@ -569,10 +599,23 @@ h3 {
   .pagination ul li.active {
     background-color: #cfa267; }
 
+::placeholder {
+  color: #281c0c; }
+
 .input-form {
   width: 100%;
   text-align: center; }
   .input-form input {
+    width: 80%;
+    display: inline-block;
+    outline: none;
+    background-color: #f0f0f0;
+    padding: 1.25rem;
+    font-size: 0.875rem;
+    font-family: "Asap-Regular", sans-serif;
+    margin: 0.3125rem 0;
+    border: 1px solid #d8d8d8; }
+  .input-form textarea {
     width: 80%;
     display: inline-block;
     outline: none;
@@ -1545,7 +1588,7 @@ button.swiper-pagination-bullet {
   appearance: none;
   flex-grow: 1;
   outline: none;
-  background: url("../images/homepage/icon/arrow.png") 97% no-repeat #f7f8f9;
+  background: url("../images/homepage/icon/arrow.png") 90% no-repeat #f7f8f9;
   color: #281c0c; }
 
 .button-search {
@@ -2319,5 +2362,34 @@ footer {
     position: absolute;
     right: 5px;
     bottom: 15px; }
+
+.post .container-type {
+  background-color: white;
+  color: #9b9b9b; }
+.post .container-type .type-radio.active {
+  color: #ef5350; }
+.post .input-form label, .post .input-form input, .post .input-form select {
+  width: 100%; }
+.post .input-form input, .post .input-form select, .post .input-form textarea {
+  background-color: white; }
+.post .input-form textarea {
+  width: 100%; }
+.post .input-form button.btn-upload {
+  padding: 2.075rem 2.2rem;
+  margin: 0; }
+.post .select-type {
+  background: url("../images/homepage/icon/arrow.png") 95% no-repeat white; }
+.post .select-type.select-info {
+  background: url("../images/homepage/icon/arrow_triangle.png") 97% no-repeat white; }
+@media screen and (max-width: 559px) {
+  .post select.mgRight20 {
+    margin-right: 1rem !important; } }
+
+.delete-image {
+  position: absolute;
+  right: 20px;
+  bottom: 10px;
+  background-color: white;
+  padding: 5px 5px 0 5px; }
 
 /*# sourceMappingURL=site.css.map */
